update -> e3mall, 修改格式